# wordlebot

./: Cargo.toml  Dockerfile  README.md  manifest.yaml
src/: detector.rs  main.rs  words.rs
