[package]
name = "wordlebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.10"}
regex = "1"
lazy_static = "1.4.0"
